Fixed pom parsing for modules with non-ascii names.